k8s0-web--main/k8s0-web--main/deploy/aws-eks/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bida
  labels:
    app.kubernetes.io/name: bida-caocap
    app.kubernetes.io/part-of: bida-ecommerce
